--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-project",
-  "homepage": "/demo",
+  "homepage": "https://perryzjc.github.io/recipe_demo/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
