--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,12 +25,12 @@ jobs:
         uses: actions/setup-node@v3
 
       - name: Install dependencies
-        uses: bahmutov/npm-install@v1
-        working-directory: ./frontend
+        run: npm install
+        working-directory: ./frontend  # Specify the working directory for npm install
 
       - name: Build project
         run: npm run build
-        working-directory: ./frontend
+        working-directory: ./frontend  # Specify the working directory for the build command
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
