--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.2",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^10.16.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
